--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <section class="banner">
     <h1>Ksenia Coulter</h1>
     <h2>Full-Stack Web Developer</h2>
+    <div class="button social twitter">twitter</div>
+    <div class="button social github">github</div>
+    <div class="button social linkedin">linkedin</div>
   </section>
 
   <section class="portfolio">
@@ -65,6 +68,9 @@
 
   <section class="contact">
   </section>
+
+  <footer>
+  </footer>
   <script src="js/script.js"></script>
 </body>
 </html>
