--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Ksenia Coulter" content="Portfolio">
   <link rel="stylesheet" src="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Roboto:400,300,300italic,500,500italic,700,900|Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -19,11 +20,13 @@
   </nav>
 
   <section class="banner">
-    <h1>Ksenia Coulter</h1>
-    <h2>Full-Stack Web Developer</h2>
-    <div class="button social twitter">twitter</div>
-    <div class="button social github">github</div>
-    <div class="button social linkedin">linkedin</div>
+    <div class="wrapper">
+      <h1>Ksenia Coulter</h1>
+      <h2>Full-Stack Web Developer</h2>
+      <div class="button social twitter">twitter</div>
+      <div class="button social github">github</div>
+      <div class="button social linkedin">linkedin</div>
+  </div>
   </section>
 
   <section class="portfolio">
