--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Ksenia Coulter" content="Portfolio">
   <link rel="stylesheet" src="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Roboto:400,300,300italic,500,500italic,700,900|Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 
