started styling portfolio section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <ul>
       <li><a href="#">About</a></li>
-      <li><a href="#">Portfolio</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -24,21 +24,21 @@
     <div class="wrapper">
       <h1>Ksenia Coulter</h1>
       <h2>Full-Stack Web Developer</h2>
-      <div class="button social twitter">twitter</div>
-      <div class="button social github">github</div>
-      <div class="button social linkedin">linkedin</div>
+      <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
+      <a href="https://github.com/kscoulter" class="button social github">github</a>
+      <a href="https://www.linkedin.com/in/kseniacoulter" class="button social linkedin">linkedin</a>
   </div>
   </section>
 
   <section class="portfolio">
-    <h1>Portfolio</h1>
+    <h1><a name="portfolio">Portfolio</a></h1>
     <div class="project traversd">
       <div class="col">
         <h2>Traversd</h2>
-        <p></p>
+        <p>Traversd is a bus app for the Washington DC area that uses the WMATA next bus API and Dark Sky API to provide bus riders with up-to-date information about the estimated arrival times and accurate weather information for a chosen bus stop.</p>
       </div>
       <div class="col">
-        <img src=""/>
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/BetterBusApp.png"/>
       </div>
     </div>
     <div class="project board-together">
