styling portfolio section

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     </div>
     <div class="project board-together">
       <div class="col">
-        <h2>Board Together</h2>
-        <p></p>
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png"/>
       </div>
       <div class="col">
-        <img src=""/>
+        <h2>Board Together</h2>
+        <p>Event app for connecting avid board game players.</p>
       </div>
     </div>
     <div class="project concentration">
       <div class="col">
         <h2>Concentration Game</h2>
-        <p></p>
+        <p>Space-themed concentration game (also know as memory game).</p>
       </div>
       <div class="col">
         <img src=""/>
@@ -61,11 +61,11 @@
     </div>
     <div class="project hangman">
       <div class="col">
-        <h2>Hangman</h2>
-        <p></p>
+        <img src=""/>
       </div>
       <div class="col">
-        <img src=""/>
+        <h2>Hangman</h2>
+        <p>Digital version of the classic game.</p>
       </div>
     </div>
   </section>
