styling portfolio section, adding images.

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <p>Space-themed concentration game (also know as memory game).</p>
       </div>
       <div class="col">
-        <img src=""/>
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/spacegame.jpg"/>
       </div>
     </div>
     <div class="project hangman">
       <div class="col">
-        <img src=""/>
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png"/>
       </div>
       <div class="col">
         <h2>Hangman</h2>
