added contact me section and footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="#">About</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
@@ -43,11 +43,11 @@
     </div>
     <div class="project board-together">
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png"/>
-      </div>
-      <div class="col">
         <h2>Board Together</h2>
         <p>Event app for connecting avid board game players.</p>
+      </div>
+      <div class="col">
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png"/>
       </div>
     </div>
     <div class="project concentration">
@@ -61,19 +61,28 @@
     </div>
     <div class="project hangman">
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png"/>
-      </div>
-      <div class="col">
         <h2>Hangman</h2>
         <p>Digital version of the classic game.</p>
+      </div>
+      <div class="col">
+        <img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png"/>
       </div>
     </div>
   </section>
 
   <section class="contact">
+    <div class="content">
+      <h1><a name="contact">Contact Me</a></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et condimentum tortor, eu viverra metus. Integer molestie nunc id erat vulputate, non tempus lacus mattis. Proin id sapien massa. Donec dignissim efficitur ligula, sed tincidunt turpis ullamcorper ac.</p>
+      <a href="mailto:kseniacoulter@gmail.com" class="button social gmail">gmail</a>
+      <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
+      <a href="https://github.com/kscoulter" class="button social github">github</a>
+      <a href="https://www.linkedin.com/in/kseniacoulter" class="button social linkedin">linkedin</a>
+    </div>
   </section>
 
   <footer>
+    <p>(c)Ksenia Coulter 2015</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
