added download resume link, darkened background image for contact me section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Ksenia Coulter</title>
   <meta name="Ksenia Coulter" content="Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" src="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,6 +18,7 @@
       <li><a href="#">About</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li id="resume"><a href="/Users/kcoulter/Documents/portfolio-website/resources/Ksenia-Coulter-Resume.pdf" download>Resum&eacute;</a></li>
     </ul>
   </nav>
 
@@ -52,7 +54,7 @@
     </div>
     <div class="project concentration">
       <div class="col">
-        <h2>Concentration Game</h2>
+        <h2>Concentration</h2>
         <p>Space-themed concentration game (also know as memory game).</p>
       </div>
       <div class="col">
@@ -73,7 +75,7 @@
   <section class="contact">
     <div class="content">
       <h1><a name="contact">Contact Me</a></h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et condimentum tortor, eu viverra metus. Integer molestie nunc id erat vulputate, non tempus lacus mattis. Proin id sapien massa. Donec dignissim efficitur ligula, sed tincidunt turpis ullamcorper ac.</p>
+      <p>Let's start a conversation! You can email me, tweet at me, or add me on LinkedIn.</p>
       <a href="mailto:kseniacoulter@gmail.com" class="button social gmail">gmail</a>
       <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
       <a href="https://github.com/kscoulter" class="button social github">github</a>
@@ -82,7 +84,7 @@
   </section>
 
   <footer>
-    <p>(c)Ksenia Coulter 2015</p>
+    <p>&#169;Ksenia Coulter 2015</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
