--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="utf-8">
   <title>Ksenia Coulter</title>
   <meta name="Ksenia Coulter" content="Portfolio">
+  <!-- For Mobile Devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Stylesheets -->
   <link rel="stylesheet" src="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/Users/kcoulter/Documents/portfolio-website/font-mfizz-1.2/font-mfizz.css">
+  <!-- Google Fonts  -->
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Roboto:400,300,300italic,500,500italic,700,900|Slabo+27px' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Domine:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -38,6 +44,7 @@
       <div class="col">
         <h2>Traversd</h2>
         <p>Traversd is a bus app for the Washington DC area that uses the WMATA next bus API and Dark Sky API to provide bus riders with up-to-date information about the estimated arrival times and accurate weather information for a chosen bus stop.</p>
+        <h3><i class="icon-nodejs"></i> NodeJS/Express</h3>
       </div>
       <div class="col">
         <img src="/Users/kcoulter/Documents/portfolio-website/images/BetterBusApp.png"/>
@@ -46,7 +53,8 @@
     <div class="project board-together">
       <div class="col">
         <h2>Board Together</h2>
-        <p>Event app for connecting avid board game players.</p>
+        <p>Event app for connecting avid board game players. Simply sign up, create an event, indicate what game you want to play and how many players you need.</p>
+        <h3><i class="icon-ruby-on-rails-alt"></i> Ruby on Rails</h3>
       </div>
       <div class="col">
         <img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png"/>
@@ -55,7 +63,8 @@
     <div class="project concentration">
       <div class="col">
         <h2>Concentration</h2>
-        <p>Space-themed concentration game (also know as memory game).</p>
+        <p>Test your memory with this space-themed concentration game, just beware of the aliens.</p>
+        <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
         <img src="/Users/kcoulter/Documents/portfolio-website/images/spacegame.jpg"/>
@@ -65,6 +74,7 @@
       <div class="col">
         <h2>Hangman</h2>
         <p>Digital version of the classic game.</p>
+        <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
         <img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png"/>
@@ -78,8 +88,8 @@
       <p>Let's start a conversation! You can email me, tweet at me, or add me on LinkedIn.</p>
       <a href="mailto:kseniacoulter@gmail.com" class="button social gmail">gmail</a>
       <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
-      <a href="https://github.com/kscoulter" class="button social github">github</a>
       <a href="https://www.linkedin.com/in/kseniacoulter" class="button social linkedin">linkedin</a>
+      <a href="https://github.com/kscoulter" class="button social github">github</a>
     </div>
   </section>
 
