added links to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- For Mobile Devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Stylesheets -->
-  <link rel="stylesheet" src="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/Users/kcoulter/Documents/portfolio-website/font-mfizz-1.2/font-mfizz.css">
@@ -39,7 +39,7 @@
   </section>
 
   <section class="portfolio">
-    <h1><a name="portfolio">Portfolio</a></h1>
+    <h1><a id="portfolio">Portfolio</a></h1>
     <div class="project traversd">
       <div class="col">
         <h2>Traversd</h2>
@@ -47,7 +47,7 @@
         <h3><i class="icon-nodejs"></i> NodeJS/Express</h3>
       </div>
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/BetterBusApp.png"/>
+        <a href="https://github.com/kscoulter/Traversed_WMATA_application"><img src="/Users/kcoulter/Documents/portfolio-website/images/BetterBusApp.png" alt="Traversd Bus App"/></a>
       </div>
     </div>
     <div class="project board-together">
@@ -57,7 +57,7 @@
         <h3><i class="icon-ruby-on-rails-alt"></i> Ruby on Rails</h3>
       </div>
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png"/>
+        <a href="https://github.com/kscoulter/board-together"><img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png" alt="Board Together"/></a>
       </div>
     </div>
     <div class="project concentration">
@@ -67,7 +67,7 @@
         <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/spacegame.jpg"/>
+        <a href="https://github.com/kscoulter/kscoulter.github.io"><img src="/Users/kcoulter/Documents/portfolio-website/images/spacegame.jpg" alt="Concentration Game"/></a>
       </div>
     </div>
     <div class="project hangman">
@@ -77,14 +77,14 @@
         <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
-        <img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png"/>
+        <a href="https://github.com/kscoulter/hangman"><img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png" alt="Hangman Game"/></a>
       </div>
     </div>
   </section>
 
   <section class="contact">
     <div class="content">
-      <h1><a name="contact">Contact Me</a></h1>
+      <h1><a id="contact">Contact Me</a></h1>
       <p>Let's start a conversation! You can email me, tweet at me, or add me on LinkedIn.</p>
       <a href="mailto:kseniacoulter@gmail.com" class="button social gmail">gmail</a>
       <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
