changing absolute paths to project paths

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/Users/kcoulter/Documents/portfolio-website/font-mfizz-1.2/font-mfizz.css">
+  <link rel="stylesheet" href="font-mfizz-1.2/font-mfizz.css">
   <!-- Google Fonts  -->
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Roboto:400,300,300italic,500,500italic,700,900|Slabo+27px' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
       <li><a href="#">About</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li id="resume"><a href="/Users/kcoulter/Documents/portfolio-website/resources/Ksenia-Coulter-Resume.pdf" download>Resum&eacute;</a></li>
+      <li id="resume"><a href="resources/Ksenia-Coulter-Resume.pdf" download>Resum&eacute;</a></li>
     </ul>
   </nav>
 
@@ -47,7 +47,7 @@
         <h3><i class="icon-nodejs"></i> NodeJS/Express</h3>
       </div>
       <div class="col">
-        <a href="https://github.com/kscoulter/Traversed_WMATA_application"><img src="/Users/kcoulter/Documents/portfolio-website/images/BetterBusApp.png" alt="Traversd Bus App"/></a>
+        <a href="https://github.com/kscoulter/Traversed_WMATA_application"><img src="images/BetterBusApp.png" alt="Traversd Bus App"/></a>
       </div>
     </div>
     <div class="project board-together">
@@ -57,7 +57,7 @@
         <h3><i class="icon-ruby-on-rails-alt"></i> Ruby on Rails</h3>
       </div>
       <div class="col">
-        <a href="https://github.com/kscoulter/board-together"><img src="/Users/kcoulter/Documents/portfolio-website/images/board-together.png" alt="Board Together"/></a>
+        <a href="https://github.com/kscoulter/board-together"><img src="images/board-together.png" alt="Board Together"/></a>
       </div>
     </div>
     <div class="project concentration">
@@ -67,7 +67,7 @@
         <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
-        <a href="https://github.com/kscoulter/kscoulter.github.io"><img src="/Users/kcoulter/Documents/portfolio-website/images/spacegame.jpg" alt="Concentration Game"/></a>
+        <a href="https://github.com/kscoulter/kscoulter.github.io"><img src="images/spacegame.jpg" alt="Concentration Game"/></a>
       </div>
     </div>
     <div class="project hangman">
@@ -77,7 +77,7 @@
         <h3><i class="icon-javascript"></i> JavaScript/jQuery</h3>
       </div>
       <div class="col">
-        <a href="https://github.com/kscoulter/hangman"><img src="/Users/kcoulter/Documents/portfolio-website/images/hangman.png" alt="Hangman Game"/></a>
+        <a href="https://github.com/kscoulter/hangman"><img src="images/hangman.png" alt="Hangman Game"/></a>
       </div>
     </div>
   </section>
