added a link to my Medium profile, added hover state on buttons, fixed background image url

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <h1>Ksenia Coulter</h1>
       <h2>Full-Stack Web Developer</h2>
       <a href="https://twitter.com/kscoult" class="button social twitter">twitter</a>
+      <a href="https://medium.com/@kcoulter" class="button social medium">medium</a>
       <a href="https://github.com/kscoulter" class="button social github">github</a>
       <a href="https://www.linkedin.com/in/kseniacoulter" class="button social linkedin">linkedin</a>
   </div>
